--- a/partial-help.html
+++ b/partial-help.html
@@ -1,1 +1,7 @@
-<p>Ayuda</p>
+<div class="preloader" ng-show="layout.loading">
+    <i class="fa fa-refresh fa-5 fa-spin"></i>
+</div>
+<div ng-show="!layout.loading">
+   Contenido
+</div>
+
