--- a/partial-help.html
+++ b/partial-help.html
@@ -1,1 +1,8 @@
-<p>Ayuda</p>
+
+<div ng-show="layout.loading" class="preloader">
+    <i class="fa fa-refresh fa-spin"></i>
+</div>
+
+<div ng-show="!layout.loading">
+    <p>Ayuda</p>
+</div>
